--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ input[type="text"] {
     border: 1px solid #ccc;
     border-radius: 5px;
     margin-right: 10px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0,0.3);
 }
 button {
     padding: 8px 15px;
@@ -23,9 +24,8 @@ button {
     border-radius: 5px;
     color: white;
     cursor: pointer;
+    box-shadow: 0 5px 10px rgba(0, 0, 0,0.3);
 }
-
-
 ul {
     list-style-type: none;
     padding: 0;
@@ -38,8 +38,8 @@ li {
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 5px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0,0.3);
 }
-
 #agregarBTN{
     background-color: #64e966;
     color: black;
@@ -55,4 +55,24 @@ li {
 button.delete {
         margin-left: auto;
         background-color: #dc3545;
-        }
+        box-shadow: none;
+}
+
+@media only screen and (max-width: 600px) {
+    h1 {
+        font-size: 40px;
+    }
+
+}
+    
+@media only screen and (min-width: 601px) and (max-width: 1024px) {
+    h1 {
+        font-size: 50px;
+    }
+}
+
+@media only screen and (min-width: 1025px) {    
+    h1 {
+        font-size: 80px;
+    }
+}
